--- a/angularjs test/st.css
+++ b/angularjs test/st.css
@@ -1,22 +1,28 @@
 button.btn.btn-success {
-    background: white;
-    color: black;
-    border-color: black;
+  background: white;
+  color: black;
+  border-color: black;
 }
 button.btn.btn-primary {
-    background-color: #2acd3e;
-    border-color: #ffffff;
+  background-color: #2acd3e;
+  border-color: #ffffff;
 }
 button.btn.btn-warning {
-    background-color: #515fc3;
-    border-color: #e1e1e1;
+  background-color: #515fc3;
+  border-color: #e1e1e1;
 }
 h3 {
-    background-color: #515fc3;
-    color: white;
-    height: 50px;
-    line-height: 49px;
-    width: 40%;
-    padding-left: 16px;
-    border-radius: 4%;
+  background-color: #515fc3;
+  color: white;
+  height: 50px;
+  line-height: 49px;
+  width: 40%;
+  padding-left: 16px;
+  border-radius: 4%;
+}
+.custom-table {
+  margin-top: 10px;
+  border: 2px solid #1e209c;
+  border-radius: 20px;
+  padding: 10px;
 }
