--- a/angularjs test/st.css
+++ b/angularjs test/st.css
@@ -20,9 +20,12 @@ h3 {
   padding-left: 16px;
   border-radius: 4%;
 }
-.custom-table {
-  margin-top: 10px;
-  border: 2px solid #1e209c;
-  border-radius: 20px;
-  padding: 10px;
+.one1 {
+    margin-top: 10px;
+    border: 2px solid #1e209c;
+    border-radius: 20px;
+    padding: 10px;
+    width: 40%;
+    padding-bottom: 1px;
+    /* padding: 0px; */
 }
